# Kagami

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: make_icon.py
scripts/: bundle-macos.sh
src/: archive.rs  controls.rs  main.rs  pdf.rs  video.rs
