[package]
name = "Kagami"
version = "0.0.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
# wgpu backend only (the code reads wgpu_render_state); default_fonts for text.
# default-features off drops glow, accesskit and the x11/wayland/web backends.
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts"] }
# Decodes every supported format (JPEG via zune-jpeg, PNG via png, etc.) and does
# the downscale. eframe already pulls `image` in, so depending on it is free.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
crossbeam-channel = "0.5"
anyhow = "1"
# Move deleted files to the Trash. default-features off drops chrono (Linux
# freedesktop spec) and the Windows COM bits; macOS uses NSFileManager.
trash = { version = "5", default-features = false }
# Browse media inside .zip/.cbz in place (src/archive.rs): entries decompress
# straight into memory, never to a temp file. default-features off drops the
# aes/bzip2/lzma/zstd codecs; deflate + stored covers real-world media archives.
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
# Already in the tree as image's GIF backend; used directly for the cheap
# frame-count pre-pass (skips pixel data) that sizes the animation budget.
gif = "0.14"
# Video playback is delegated wholesale to libvlc (demux, decode, A/V sync,
# seeking and audio output). We link the system libvlc (no source build) and
# pull frames via VLC's "vmem" callbacks into an egui texture, so no OpenGL
# context is needed alongside the wgpu backend. The minimal FFI is hand-rolled
# in src/video.rs, so no wrapper crate is needed.

# macOS: a native NSOpenPanel that allows picking a file *or* a folder, plus app
# activation so the window comes to the front. The objc2 crates are already in
# the tree (eframe/winit pull them), so depending on them is cheap.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSURL", "NSDate", "NSRunLoop"] }
objc2-app-kit = { version = "0.3", features = [
    "NSResponder", "NSWindow", "NSPanel", "NSSavePanel", "NSOpenPanel",
    "NSApplication", "NSRunningApplication", "NSEvent",
    "NSView", "NSVisualEffectView", "NSControl", "NSSlider", "NSButton",
    "NSTextField", "NSText", "NSImage", "NSImageView", "NSColor", "NSFont",
] }

# Folder picker for non-macOS platforms (macOS uses NSOpenPanel above).
[target.'cfg(not(target_os = "macos"))'.dependencies]
rfd = "0.15"

[build-dependencies]
# Locate the system libvlc for the linker.
pkg-config = "0.3"
